--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div class="nav col-start-4 col-end-5 m-col-start-12 m-col-end-12 l-col-start-12 l-col-end-12 box">
                 <h2 class="hidden">Nav</h2>
                 
-                <img src="images/hamburger-menu-icon.svg" alt="Nav Menu">
+                <a href="contact-page.html"><img src="images/hamburger-menu-icon.svg" alt="Nav Menu"></a>
+                
             <!-- will build into a drop down menu-->
             </div> 
         </nav>
@@ -85,7 +86,7 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Beer Menu</a></li>
                             <li><a href="#">Merchandise</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact-page.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
